[project]
name = "accent-provd"
version = "0.1.0"
description = "Provd"
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.11"
dependencies = [
  "cryptography>=3.3.2",
  "jinja2>=2.11.3",
  "kombu>=5.0.2",
  "markupsafe>=1.1.1",
  "pydantic>=2.10.6",
  "pyopenssl>=22.1.0",
  "pyyaml>=6.0",
  "requests>=2.25.1",
  "stevedore>=5.4.1",
  "twisted>=21.2.0",
  "zope.interface>=5.2.0",
  "accent-lib-rest-client",
  "accent-fetchfw",
  "accent-bus",
  "accent-auth-client",
  "accent-amid-client",
  "accent",
]

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.uv.sources]
accent-lib-rest-client = { workspace = true }
accent-fetchfw = { workspace = true }
accent-bus = { workspace = true }
accent-auth-client = { workspace = true }
accent-amid-client = { workspace = true }
accent = { workspace = true }

[tool.hatch.build.targets.sdist]
include = [
  "accent_provd",
  "accent_provd/rest/api/api.yml",
  "accent_provd/tzinform/tzdatax",
  "twisted/.noinit",
  "twisted/plugins/provd_plugin.py",
  "twisted/plugins/.noinit",
]

[tool.hatch.build.targets.wheel]
include = [
  "accent_provd",
  "accent_provd/rest/api/api.yml",
  "accent_provd/tzinform/tzdatax",
  "twisted/.noinit",
  "twisted/plugins/provd_plugin.py",
  "twisted/plugins/.noinit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
