[tool.poetry]
name = "accent-purge-db"
version = "0.1.0"
description = ""
authors = ["Ryan Clark <ryanc@accentservices.com>"]
packages = [
    {include = "accent_purge_db"}
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
psycopg2 = "^2.8.6"
PyYAML = "^5.3.1"
SQLAlchemy = ">=1.3.0, <1.4.0"
sqlalchemy-utils = "^0.37.2"
stevedore = "^4.0.2"
accent-dao = {path = "../../library/accent-dao"}
accent = {path = "../../library/accent-lib-python"}


[tool.poetry.group.dev.dependencies]
commitizen = "^3.10.0"
dunamai = "^1.18.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.6.4"
tox = "^3.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 99
fix = true

[tool.ruff.lint]
select = [
  "YTT",  # flake8-2020
  "S",  # flake8-bandit
  "B",  # flake8-bugbear
  "A",  # flake8-builtins
  "C4",  # flake8-comprehensions
  "T10",  # flake8-debugger
  "SIM",  # flake8-simplify
  "I",  # isort
  "C90",  # mccabe
  "E",  # pycodestyle
  "W",  # pycodestyle
  "F", # pyflakes
  "PGH",  # pygrep-hooks
  "UP",  # pyupgrade
  "RUF",  # ruff
  "TRY",  # tryceratops
]

ignore = [
  "E501",  # LineTooLong
  "E731",  # DoNotAssignLambda
  "E203",  # Whitespace before ':'
  "W503",  # Line break before binary operator
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["UPDATE"]


[tool.poetry.plugins."console_scripts"]
accent-purge-db = "accent_purge_db.cli:main"

[tool.poetry.plugins."accent_purge_db.purgers"]
cel = "accent_purge_db.table_purger:CELPurger"
queue-log = "accent_purge_db.table_purger:QueueLogPurger"
stat-agent = "accent_purge_db.table_purger:StatAgentPeriodicPurger"
stat-call-on = "accent_purge_db.table_purger:StatCallOnQueuePurger"
stat-queue = "accent_purge_db.table_purger:StatQueuePeriodicPurger"
stat-switchboard = "accent_purge_db.table_purger:StatSwitchboardPurger"
