[project]
name = "accent-purge-db"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.9"
dependencies = [
  "psycopg",
  "pyyaml>=6.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "sqlalchemy-utils>=0.37.2",
  "stevedore>=5.4.1",
  "accent-dao",
  "accent",
]

[project.scripts]
accent-purge-db = "accent_purge_db.cli:main"

[project.entry-points."accent_purge_db.purgers"]
cel = "accent_purge_db.table_purger:CELPurger"
queue-log = "accent_purge_db.table_purger:QueueLogPurger"
stat-agent = "accent_purge_db.table_purger:StatAgentPeriodicPurger"
stat-call-on = "accent_purge_db.table_purger:StatCallOnQueuePurger"
stat-queue = "accent_purge_db.table_purger:StatQueuePeriodicPurger"
stat-switchboard = "accent_purge_db.table_purger:StatSwitchboardPurger"

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.uv.sources]
accent-dao = { workspace = true }
accent = { workspace = true }

[tool.hatch.build.targets.sdist]
include = ["accent_purge_db"]

[tool.hatch.build.targets.wheel]
include = ["accent_purge_db"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
