[project]
name = "accent-setupd"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.11"
dependencies = [
  "cheroot>=8.5.2",
  "flask>=1.1.2",
  "Flask-Cors>=3.0.10",
  "Flask-RESTful>=0.3.8",
  "itsdangerous>=1.1.0",
  "Jinja2>=3.1.6",
  "kombu>=5.0.2",
  "markupsafe>=1.1.1",
  "marshmallow>=3.10.0",
  "python-consul>=1.1.0",
  "pyyaml>=6.0",
  "stevedore>=5.4.1",
  "werkzeug>=1.0.1",
  "accent-deployd-client",
  "accent-lib-rest-client",
  "accent-auth-client",
  "accent-confd-client",
  "accent-bus",
  "accent",
]

[project.scripts]
accent-setupd = "accent_setupd.main:main"

[project.entry-points."accent_setupd.plugins"]
api = "accent_setupd.plugins.api.plugin:Plugin"
config = "accent_setupd.plugins.config.plugin:Plugin"
setup = "accent_setupd.plugins.setup.plugin:Plugin"
status = "accent_setupd.plugins.status.plugin:Plugin"

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.uv.sources]
accent-deployd-client = { workspace = true }
accent-lib-rest-client = { workspace = true }
accent-auth-client = { workspace = true }
accent-confd-client = { workspace = true }
accent-bus = { workspace = true }
accent = { workspace = true }

[tool.hatch.build.targets.sdist]
include = ["accent_setupd", "accent_setupd/plugins/*/api.yml"]

[tool.hatch.build.targets.wheel]
include = ["accent_setupd", "accent_setupd/plugins/*/api.yml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
