[project]
name = "accent-stat"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.9"
dependencies = [
  "psycopg",
  "pyyaml>=6.0",
  "requests>=2.25.1",
  "sqlalchemy[asyncio]>=2.0.0",
  "sqlalchemy-utils>=0.37.2",
  "stevedore>=5.4.1",
  "accent-lib-rest-client",
  "accent-auth-client",
  "accent-confd-client",
  "accent-dao",
  "accent",
]

[project.scripts]
accent-stat = "accent_stat.main:main'"

[project.entry-points]

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.uv.sources]
accent-lib-rest-client = { workspace = true }
accent-auth-client = { workspace = true }
accent-confd-client = { workspace = true }
accent-dao = { workspace = true }
accent = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

