[project]
name = "accent-ui"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.9"
dependencies = [
  "Babel>=2.8.0",
  "cheroot>=8.5.2",
  "flask>=1.1.2",
  "Flask-Babel>=1.0.0",
  "Flask-Classful>=0.14.0",
  "Flask-Login>=0.5.0",
  "Flask-Menu==0.7.2",
  "Flask-Session>=0.3.1",
  "Flask-SQLAlchemy~=2.1",
  "Flask-WTF>=0.14.3",
  "itsdangerous>=1.1.0",
  "Jinja2>=2.11.3",
  "markupsafe>=1.1.1",
  "pyyaml>=6.0",
  "requests>=2.25.1",
  "sqlalchemy[asyncio]>=2.0.0",
  "stevedore>=5.4.1",
  "werkzeug>=1.0.1",
  "WTForms[email]>=2.2.1",
  "accent-lib-rest-client",
  "accent-amid-client",
  "accent-auth-client",
  "accent-call-logd-client",
  "accent-confd-client",
  "accent-dird-client",
  "accent-plugind-client",
  "accent-provd-client",
  "accent-webhookd-client",
  "accent",
]

[project.scripts]
accent-ui = "accent_ui.bin.daemon:main"

[project.entry-points."accent_ui.plugins"]
access_feature = "accent_ui.plugins.access_feature.plugin:Plugin"
agent = "accent_ui.plugins.agent.plugin:Plugin"
application = "accent_ui.plugins.application.plugin:Plugin"
authentication = "accent_ui.plugins.authentication.plugin:Plugin"
call_filter = "accent_ui.plugins.call_filter.plugin:Plugin"
call_permission = "accent_ui.plugins.call_permission.plugin:Plugin"
call_pickup = "accent_ui.plugins.call_pickup.plugin:Plugin"
cdr = "accent_ui.plugins.cdr.plugin:Plugin"
cli = "accent_ui.plugins.cli.plugin:Plugin"
conference = "accent_ui.plugins.conference.plugin:Plugin"
context = "accent_ui.plugins.context.plugin:Plugin"
device = "accent_ui.plugins.device.plugin:Plugin"
dhcp = "accent_ui.plugins.dhcp.plugin:Plugin"
dird_profile = "accent_ui.plugins.dird_profile.plugin:Plugin"
dird_source = "accent_ui.plugins.dird_source.plugin:Plugin"
extension = "accent_ui.plugins.extension.plugin:Plugin"
external_auth = "accent_ui.plugins.external_auth.plugin:Plugin"
funckey = "accent_ui.plugins.funckey.plugin:Plugin"
general_settings = "accent_ui.plugins.general_settings.plugin:Plugin"
global_settings = "accent_ui.plugins.global_settings.plugin:Plugin"
group = "accent_ui.plugins.group.plugin:Plugin"
ha = "accent_ui.plugins.ha.plugin:Plugin"
hep = "accent_ui.plugins.hep.plugin:Plugin"
identity = "accent_ui.plugins.identity.plugin:Plugin"
incall = "accent_ui.plugins.incall.plugin:Plugin"
index = "accent_ui.plugins.index.plugin:Plugin"
ivr = "accent_ui.plugins.ivr.plugin:Plugin"
line = "accent_ui.plugins.line.plugin:Plugin"
moh = "accent_ui.plugins.moh.plugin:Plugin"
outcall = "accent_ui.plugins.outcall.plugin:Plugin"
paging = "accent_ui.plugins.paging.plugin:Plugin"
parking_lot = "accent_ui.plugins.parking_lot.plugin:Plugin"
phonebook = "accent_ui.plugins.phonebook.plugin:Plugin"
plugin = "accent_ui.plugins.plugin.plugin:Plugin"
provisioning = "accent_ui.plugins.provisioning.plugin:Plugin"
queue = "accent_ui.plugins.queue.plugin:Plugin"
rtp = "accent_ui.plugins.rtp.plugin:Plugin"
schedule = "accent_ui.plugins.schedule.plugin:Plugin"
sip_template = "accent_ui.plugins.sip_template.plugin:Plugin"
skill = "accent_ui.plugins.skill.plugin:Plugin"
skillrule = "accent_ui.plugins.skillrule.plugin:Plugin"
sound = "accent_ui.plugins.sound.plugin:Plugin"
switchboard = "accent_ui.plugins.switchboard.plugin:Plugin"
transport = "accent_ui.plugins.transport.plugin:Plugin"
trunk = "accent_ui.plugins.trunk.plugin:Plugin"
user = "accent_ui.plugins.user.plugin:Plugin"
voicemail = "accent_ui.plugins.voicemail.plugin:Plugin"
webhook = "accent_ui.plugins.webhook.plugin:Plugin"

[dependency-groups]
dev = ["pytest>=8.3.5", "gunicorn>=21.2.0"]

[tool.uv.sources]
accent-lib-rest-client = { workspace = true }
accent-amid-client = { workspace = true }
accent-auth-client = { workspace = true }
accent-call-logd-client = { workspace = true }
accent-confd-client = { workspace = true }
accent-dird-client = { workspace = true }
accent-plugind-client = { workspace = true }
accent-provd-client = { workspace = true }
accent-webhookd-client = { workspace = true }
accent = { workspace = true }

[tool.hatch.build.targets.sdist]
include = [
  "accent_ui",
  "accent_ui/static/*",
  "accent_ui/templates/*",
  "accent_ui/translations/*",
  "accent_ui/plugins/*/static/*",
  "accent_ui/plugins/*/templates/*",
]

[tool.hatch.build.targets.wheel]
include = [
  "accent_ui",
  "accent_ui/static/*",
  "accent_ui/templates/*",
  "accent_ui/translations/*",
  "accent_ui/plugins/*/static/*",
  "accent_ui/plugins/*/templates/*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

